--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "dorent_frontdev",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "node-sass": "^4.10.0",
+    "promise-polyfill": "^8.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-ionicons": "^2.1.6",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "reset-css": "^4.0.1"
   },
   "scripts": {
